# AmnesiaTheDarkDescent

./: .gitignore  CONTRIBUTING.md  README.md  changelog.txt
HPL2/core/: CMakeLists.txt  _HPL2_2010.vcxproj  _HPL2_2010.vcxproj.filters  buildcounter.pl
HPL2/core/cmake/: BoilerPlate.cmake  FindDevil.cmake  UtilityFunctions.cmake
HPL2/core/include/: CommunityEdition.h  hpl.h
HPL2/core/include/ai/: AI.h  AINodeContainer.h  AINodeGenerator.h  AStar.h  StateMachine.h
HPL2/core/include/engine/: Engine.h  EngineInitVars.h  EngineTypes.h  LowLevelEngineSetup.h  SaveGame.h  ScriptFuncs.h  Updateable.h  Updater.h
HPL2/core/include/generate/: Generate.h  GenerateTypes.h  VoxelMap.h
HPL2/core/include/graphics/: Animation.h  AnimationTrack.h  Bitmap.h  Bone.h  BoneState.h  Color.h  DecalCreator.h  FontData.h  FrameBase.h  FrameBitmap.h  FrameBuffer.h  FrameSubImage.h  FrameTexture.h  GPUProgram.h  GPUShader.h  Graphics.h  GraphicsTypes.h  LowLevelGraphics.h  Material.h  MaterialType.h  MaterialType_BasicSolid.h  MaterialType_BasicTranslucent.h  MaterialType_Decal.h  MaterialType_Water.h  Mesh.h  MeshCreator.h  OcclusionQuery.h  PostEffect.h  PostEffectComposite.h  PostEffect_Bloom.h  PostEffect_ColorConvTex.h  PostEffect_ImageTrail.h  PostEffect_RadialBlur.h  ProgramComboManager.h  RenderFunctions.h  RenderList.h  Renderable.h  Renderer.h  RendererDeferred.h  RendererSimple.h  (+7 more)
HPL2/core/include/gui/: Gui.h  GuiGfxElement.h  GuiMaterial.h  GuiMaterialBasicTypes.h  GuiPopUp.h  GuiPopUpColorPicker.h  GuiPopUpFilePicker.h  GuiPopUpMessageBox.h  GuiPopUpUIKeyboard.h  GuiSet.h  GuiSkin.h  GuiTypes.h  Widget.h  WidgetBaseClasses.h  WidgetButton.h  WidgetCheckBox.h  WidgetComboBox.h  WidgetContextMenu.h  WidgetDummy.h  WidgetFrame.h  WidgetGroup.h  WidgetImage.h  WidgetLabel.h  WidgetListBox.h  WidgetListBoxBase.h  WidgetMainMenu.h  WidgetMenu.h  WidgetMenuItem.h  WidgetMultiPropertyListBox.h  WidgetSlider.h  WidgetTabFrame.h  WidgetTextBox.h  WidgetWindow.h
HPL2/core/include/haptic/: Haptic.h  HapticForce.h  HapticShape.h  HapticSurface.h  HapticTypes.h  LowLevelHaptic.h
HPL2/core/include/impl/: BitmapLoaderDevil.h  BitmapLoaderDevilDDS.h  BitmapLoaderDevilMisc.h  CGProgram.h  CGShader.h  CharacterBodyNewton.h  CollideShapeNewton.h  FmodSoundChannel.h  FmodSoundData.h  FrameBufferGL.h  GLSLProgram.h  GLSLShader.h  GamepadSDL.h  GamepadSDL2.h  GamepadXInput.h  HapticForceHaptX.h  HapticForceHaptX_Impulse.h  HapticForceHaptX_SawWave.h  HapticForceHaptX_SineWave.h  HapticForceHaptX_Spring.h  HapticForceHaptX_Viscosity.h  HapticShapeHaptX.h  HapticSurfaceHaptX.h  HapticSurfaceHaptX_Frictional.h  HapticSurfaceHaptX_Rough.h  HapticSurfaceHaptX_Simple.h  HapticSurfaceHaptX_Sticky.h  KeyboardSDL.h  LowLevelGraphicsSDL.h  LowLevelHapticHaptX.h  LowLevelInputSDL.h  LowLevelPhysicsNewton.h  LowLevelResourcesSDL.h  LowLevelSoundFmod.h  LowLevelSoundOpenAL.h  LowLevelSystemSDL.h  MeshLoaderCollada.h  MeshLoaderFBX.h  MeshLoaderMSH.h  MouseSDL.h  (+31 more)
HPL2/core/include/input/: Action.h  ActionGamepadAxis.h  ActionGamepadButton.h  ActionGamepadHat.h  ActionHaptic.h  ActionKeyboard.h  ActionMouseButton.h  Gamepad.h  Input.h  InputDevice.h  InputTypes.h  Keyboard.h  LowLevelInput.h  Mouse.h
HPL2/core/include/math/: BoundingVolume.h  CRC.h  Frustum.h  Math.h  MathTypes.h  Matrix.h  MeshTypes.h  PidController.h  Quaternion.h  Spring.h  Vector2.h  Vector3.h
HPL2/core/include/physics/: CharacterBody.h  CollideData.h  CollideShape.h  LowLevelPhysics.h  Physics.h  PhysicsBody.h  PhysicsController.h  PhysicsJoint.h  PhysicsJointBall.h  PhysicsJointHinge.h  PhysicsJointScrew.h  PhysicsJointSlider.h  PhysicsMaterial.h  PhysicsRope.h  PhysicsTypes.h  PhysicsWorld.h  SurfaceData.h  VerletParticle.h
HPL2/core/include/resources/: AnimationManager.h  BinaryBuffer.h  BitmapLoader.h  BitmapLoaderHandler.h  ConfigFile.h  EngineFileLoading.h  EntFileManager.h  EntityLoader_Object.h  FileSearcher.h  FontManager.h  GpuShaderManager.h  ImageManager.h  LanguageFile.h  LowLevelResources.h  MaterialManager.h  MeshLoader.h  MeshLoaderHandler.h  MeshManager.h  ParticleManager.h  ResourceBase.h  ResourceLoader.h  ResourceLoaderHandler.h  ResourceManager.h  Resources.h  ResourcesTypes.h  ScriptManager.h  SoundEntityManager.h  SoundManager.h  TextureManager.h  VideoLoader.h  VideoLoaderHandler.h  VideoManager.h  WorldLoader.h  WorldLoaderHandler.h  WorldLoaderHplMap.h  XmlDocument.h
HPL2/core/include/scene/: AnimationState.h  Beam.h  BillBoard.h  Camera.h  DummyRenderable.h  Entity3D.h  FogArea.h  GuiSetEntity.h  Light.h  LightBox.h  LightPoint.h  LightSpot.h  MeshEntity.h  Node3D.h  NodeState.h  ParticleEmitter.h  ParticleEmitter_UserData.h  ParticleSystem.h  RenderableContainer.h  RenderableContainer_BoxTree.h  RenderableContainer_DynBoxTree.h  RenderableContainer_List.h  (+7 more)
HPL2/core/sources/: CommunityEdition.cpp
amnesia/src/: CMakeLists.txt
amnesia/src/CacheFileDateFix/: CacheFileDateFix.cpp
amnesia/src/game/: CMakeLists.txt  Lux.vcproj  Lux.vcxproj  LuxAchievementHandler.cpp  LuxAchievementHandler.h  LuxArea.cpp  LuxArea.h  LuxAreaNodes.cpp  LuxAreaNodes.h  LuxArea_ColorGrading.cpp  LuxArea_Examine.cpp  LuxArea_Examine.h  LuxArea_Flashback.cpp  LuxArea_Flashback.h  LuxArea_Insanity.cpp  LuxArea_Insanity.h  LuxArea_Ladder.cpp  LuxArea_Ladder.h  LuxArea_Liquid.cpp  LuxArea_Liquid.h  LuxArea_Rope.cpp  LuxArea_Rope.h  LuxArea_Script.cpp  LuxArea_Script.h  LuxArea_Sign.cpp  LuxArea_Sign.h  LuxArea_SlimeDamage.cpp  LuxArea_SlimeDamage.h  LuxArea_Sticky.cpp  LuxArea_Sticky.h  LuxBase.cpp  LuxBase.h  LuxBasePersonal.h  LuxCommentaryIcon.cpp  LuxCommentaryIcon.h  LuxCompletionCountHandler.cpp  LuxCompletionCountHandler.h  LuxConfigHandler.cpp  LuxConfigHandler.h  LuxCredits.cpp  (+367 more)
amnesia/src/lang_conv/: LangConv.cpp  LangConv.h
amnesia/src/launcher/: LauncherHelper.cpp  LauncherHelper.h  Main.cpp  Main.h  QualityChooser.cpp  QualityChooser.h  launcher.cpp  launcher.h  launcherCz.cpp  launcherCz.h  launcherRus.cpp  launcherRus.h  resource.h
amnesia/src/launcher-macosx/: HPLMinimal.h  LauncherAppDelegate.h  TabBackground.h
(+992 files in other folders)
